--- a/templates/index.html
+++ b/templates/index.html
@@ -44,7 +44,8 @@
     </header>
 
     <main>
-        {% if not (current_filter or search_query or current_lang != 'all' or selected_sort_price) %}
+      
+        {% if not current_filter and not search_query and current_lang == 'all' and page_range == 'all' and not request.args.get('sort_price') %}
         <section class="hero-carousel">
             <div class="carousel-slider">
                 <div class="slide" id="slide-1"> 
