--- a/templates/index.html
+++ b/templates/index.html
@@ -37,8 +37,8 @@
             
             <nav class="navbar-right">
                 <a href="/" class="nav-link active">Home</a>
-                <a href="#" class="nav-link">About Us</a>
-                <a href="#" class="nav-link">Contact</a>
+                <a href="/about" class="nav-link">About Us</a>
+                <a href="#contact" class="nav-link">Contact</a>
             </nav>
         </div>
     </header>
@@ -343,7 +343,7 @@
         </div>
     </main>
 
-<footer class="footer">
+<footer class="footer" id="contact">
     <div class="footer-top">
         <div class="footer-logo">
             <img src="{{ url_for('static', filename='img/logo.png') }}" alt="Bookara" />
